css/main.css
/* ... */
@media(min-width:992px) {
  .footer {
    padding: 40px;
  }
  
  .footer .row {
    display: flex;
    flex-direction: row;
    align-items: start;
    justify-content: space-between;
    text-align: start;
  }

  .footer .logo-mobile{
    display: none;
  }

  .footer .logo-desktop{
    display: block;
  }

  .footer__logo{
    width: 80px;
    height: 100px;
  }

  .footer__title {
    font-size: 24px;
    margin-bottom: 20px;
    line-height: 28px;
    padding: 0;
  }

  .footer__list {
    gap: 20px;
  }

  .footer__list li {
    padding: 0;
    border-bottom: none;
  }

  .footer__btn{
    width: 280px;
    height: 60px;
    font-size: 15px;
  }

  .footer__copyright {
    font-size: 18px;
    line-height: 24px;
    color: #000;
    margin-top: 20px;
  }

  .footer__social {
    gap: 15px;
    margin-top: 50px;
  }
}

.header-card-wrap {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  gap: 10px;
  margin-bottom: 60px;
}

.header-card {
  width: 100%;
  border: 1px solid rgba(11, 34, 53, .2);
  border-radius: 10px;
  box-sizing: border-box;
  padding: 11px 25px;
  background-color: #fff;
}

.header-card__arrow {
  width: 14px;
  height: 12px;
  display: inline-block;
  background-image: url(../img/header-card-arrow.svg);
  background-repeat: no-repeat;
  transition: .5s;
}

.header-card.active .header-card__arrow {
  transform: rotate(180deg);
  transition: .5s;
}

.header-card.active .header-card__text {
  margin-top: 10px;
}

.header-card__title-wrap {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header-card__title {
  font-weight: 600;
  font-size: 14px;
  line-height: 16px;
  color: #297abf;
  width: 160px;
}

.header-card__text {
  font-size: 14px;
  line-height: 16px;
  overflow: hidden;
  max-height: 0;
  transition: .5s;
}

.header-card__desktop {
  display: none;
}

ul.header-card__text {
  display: flex;
  flex-direction: column;
  gap: 15px;
}

@media(min-width:576px) {
  .mob_block {
    display: block;
  }

  .header-card {
    width: 100%;
    border: 1px solid #232523;
    padding: 29px 25px;
  }

  .header-card__title {
    font-size: 20px;
    line-height: 23px;
    width: 100%;
  }

  .header-card__text {
    font-size: 18px;
    line-height: 21px;
  }

  .header-card.active .header-card__text {
    margin-top: 20px;
  }
}

@media(min-width:992px) {
  .mob_block {
    display: none;
  }

  .header-card__desktop {
    display: block;
  }

  .header-card__mob {
    display: none;
  }

  .header-card {
    position: relative;
    width: 360px;
    height: 230px;
    box-shadow: 0 8px 20px rgba(11, 34, 53, .15);
  }

  .header-card__text {
    margin-top: 20px;
    line-height: 23px;
    overflow: hidden;
    max-height: fit-content;
    transition: .5s;
  }

  .header-card__title {
    font-size: 24px;
    width: 268px;
  }

  .header-card__arrow {
    position: absolute;
    width: 24px;
    height: 18px;
    top: 20px;
    right: 15px;
    background-image: url(../img/header-card-desc-ico.svg);
  }

  .header-card-wrap {
    flex-direction: row;
    justify-content: space-between;
    margin-top: 30px;
    margin-bottom: 150px;
  }
}

.consult {
  display: none;
  margin-bottom: 63px;
}

.consult .container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 50px;
}

.consult__title {
  margin-bottom: 97px;
  max-width: 515px;
}

.consult__title h2 {
  font-weight: 700;
  font-size: 30px;
  line-height: 35px;
  color: #297abf;
  margin-bottom: 35px;
}

.consult__title p {
  font-size: 24px;
  line-height: 28px;
}

.consult__btn {
  max-width: 469px;
  margin-left: 0;
}

.consult__list {
  display: flex;
  flex-direction: column;
  gap: 30px;
  max-width: 498px;
  font-size: 24px;
  line-height: 28px;
}

@media(min-width:992px) {
  .consult {
    display: block;
  }
}

.popup {
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  height: 100%;
  background-color: rgba(0, 0, 0, .5);
  z-index: 999999;
  padding-top: 5%;
  padding-left: 20px;
  padding-right: 20px;
  display: none;
}

.popup-body {
  max-width: 700px;
  margin: 0 auto 100px;
  background-color: #fff;
  padding: 60px 40px 60px 60px;
  border: 1px solid #0b2235;
  border-radius: 10px;
  box-sizing: border-box;
  position: relative;
  max-height: 600px;
  overflow-y: hidden;
}

.popup-header {
  position: relative;
}

.popup-content {
  max-height: 500px;
  overflow-y: auto;
}

.popup__close {
  width: 15px;
  height: 15px;
  position: absolute;
  right: 0px;
  top: -30px;
  cursor: pointer;
}

.popup__close::after {
  content: "";
  position: absolute;
  width: 100%;
  background-color: #232523;
  height: 2px;
  top: 50%;
  transform: translate(0, -50%);
  transform: rotate(45deg);
}

.popup__close::before {
  content: "";
  position: absolute;
  width: 100%;
  background-color: #232523;
  height: 2px;
  top: 50%;
  transform: translate(0, -50%);
  transform: rotate(-45deg);
}

.feedback-popup .popup-body {
  display: grid;
  grid-template-areas: "img name""text text";
  row-gap: 20px;
  grid-template-columns: 40px repeat(3, 1fr);
}

.feedback-popup__img {
  grid-area: img;
  width: 60px;
}

.feedback-popup__name {
  grid-area: name;
  font-weight: 600;
  font-size: 18px;
  line-height: 24px;
  margin-top: 12px;
  margin-left: 30px;
  grid-column: 2/5;
}

.feedback-popup__text {
  grid-area: text;
  font-size: 14px;
  line-height: 18px;
  grid-column: 1/6;
}

.feedback-popup__item {
  grid-row: 3;
  grid-column: auto;
  grid-column: 1/3;
}

.feedback-popup__item:last-child {
  grid-column: 3/5;
}

.feedback-popup__item p:first-child {
  font-size: 18px;
  color: #fd460e;
  margin-bottom: 10px;
}

.feedback-popup__item p:last-child {
  font-size: 16px;
  width: 300px;
}

.feedback-popup .tutors-card__rate {
  grid-column: 2;
  grid-row: 1;
  margin-top: 40px;
  margin-left: 30px;
}

@media(min-width:576px) {
  .feedback-popup__name {
    margin-top: 6px;
  }
}
/* ... */

